# ros2_ws

./: .gitignore  HANDOFF.md  README.md
.githooks/: pre-commit
src/: lbr-stack
src/church_window/: .gitignore  package.xml  setup.cfg  setup.py
src/church_window/launch/: mock.launch.py
src/church_window/meshes/: Construction end point.mtl  Construction_end_point.stl  Construction_end_point_ONLY_ZIVID.stl
src/church_window/scripts/: flat_scan.py
src/church_window/urdf/: iiwa14_with_mount.urdf.xacro
src/config/: .setup_assistant  package.xml
src/config/config/: iiwa14_zivid.ros2_control.xacro  iiwa14_zivid.srdf  iiwa14_zivid.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/iiwa14_bringup/: package.xml  setup.cfg  setup.py
src/iiwa14_bringup/config/: iiwa_sematic.srdf  joint_limits.yaml  moveit_controllers.yaml  zivid_settings.yaml
src/iiwa14_bringup/launch/: test_parse.py  view_system_launch.py
src/iiwa14_description/: CMakeLists.txt  package.xml
src/iiwa14_description/ros2_control/: initial_joint_positions.yaml  lbr_controllers.yaml  lbr_system_interface.xacro
src/iiwa14_description/urdf/iiwa14/: iiwa14.xacro  iiwa14_description.xacro
src/zivid_artist_bot/: package.xml  setup.py
src/zivid_artist_bot/config/: artist_bot.rviz  zivid_settings.yaml
src/zivid_artist_bot/launch/: test_parse.py  view_system_launch.py
src/zivid_artist_bot/meshes/: table.dae  table.stl
src/zivid_artist_bot/rviz/: artist_bot.rviz
src/zivid_artist_bot/scripts/: optimise_svg_path.py  svg_converter.py
src/zivid_artist_bot/urdf/: artist_bot.xacro
src/zivid_artist_bot/zivid_artist_bot/: __init__.py  cartesian_control_test.py  laptop_manual_jogger.py  simulate_drawing.py  single_joint_test.py
